--- a/_posts/2021-10-11-session01.md
+++ b/_posts/2021-10-11-session01.md
@@ -1,7 +1,6 @@
 ---
 layout: post
-title: "session 1: course presentation; vectors and vector spaces"
-date: 2020-10-14
+title: "session 1: vectors and vector spaces (remote)"
 tags:
 ---
 
@@ -10,48 +9,37 @@ tags:
 0. Who is who
 1. How things will work during the course
 2. What tasks are expected from students
-3. How students will be evaluated -- check Evaluation in [landing page]({{ site.baseurl }}{% link index.md %})
-4. What we will do during the online sessions: check Overview in [landing page]({{ site.baseurl }}{% link index.md %})
-
-
-# Syllabus
-
-Official syllabus pending
+3. How students will be evaluated
+4. What we will do during the sessions
 
 
 # Topics
 
 1. Vectors and vector spaces.
-2. Sum of vectors, product of vectors by scalars.
-3. Length of a vector. Geometric thinking.
-4. Linear combinations and spans.
-5. Vector subspaces:
-   1. Vector subspace spanned by a collection of vectors
-   2. Null vector subspace
+2. Sum of vectors; product of a vector by a scalar.
+3. Thinking geometrically: lengths and angles.
+4. Linear combinations.
+5. Two vector subspace constructions:
+   1. Spans: vector subspaces spanned by a collection of vectors
+   2. Solution to system of homogeneous equations
 6. Linear independence.
-7. Basis of a vector space. Dimension.
-
-
-# Session Notes
-
-[Session Notes]({{ site.baseurl }}{% link docs/session-1-20201014.pdf %})
+7. Basis and dimension of vector spaces.
 
 
 # Homework
 
-## Online Content
+## Before
 
 1. [Vectors, what even are they? (9:52)](https://www.youtube.com/watch?v=fNk_zzaMoSs&list=PLZHQObOWTQDPD3MizzM2xVFitgF8hE_ab&index=1&t=424s)
 2. [Linear combinations, span, and basis vectors (9:59)](https://www.youtube.com/watch?v=k7RM-ot2NWY&list=PLZHQObOWTQDPD3MizzM2xVFitgF8hE_ab&index=2)
 
-
-## Exercises
+## After
 
 [Exercises]({{ site.baseurl }}{% link exercises/exercises-session1.pdf %})
 
-
 # Supplementary Content
 
+1. [Last year's notes]({{ site.baseurl }}{% link docs/session-1-20201014.pdf %})
 1. [A 2020 Vision of Linear Algebra (video series)](https://ocw.mit.edu/resources/res-18-010-a-2020-vision-of-linear-algebra-spring-2020/videos). The Linear Algebra part of this course is very much inspired by the 
 online lectures taught by Gilbert Strang. This is an ultra-condensed summary of everything that we will cover through 
 sessions 1-10. Recommended as wide overview-recap.
