--- a/_posts/2021-10-18-session03.md
+++ b/_posts/2021-10-18-session03.md
@@ -1,35 +1,32 @@
 ---
 layout: post
-title: "session 3: dissecting linear transformations"
+title: "session 3: dissecting linear transformations (remote)"
 tags:
 ---
 
 # Topics
 
 1. Recap on matrices as linear transformations
-2. Elimination
-3. Computing the inverse of a linear transformation
-4. The fundamental theorem of linear algebra
+2. Gauss-Jordan elimination
+3. Inverse of a linear transformation
+4. <b>The fundamental theorem of linear algebra</b>
 5. CR decomposition
 6. The determinant
 
 
-# Required Content
+# Homework
+
+## Before
 
 1. [Elimination (34:58)](https://drive.google.com/file/d/1UDC0g4GgxazSA2bkySeJIFNCl_ZPXIhs/view?usp=sharing)
 2. [The determinant (10:02)](https://www.youtube.com/watch?v=Ip3X9LOh2dk&list=PLZHQObOWTQDPD3MizzM2xVFitgF8hE_ab&index=6)
 
-
-# Session Notes
-
-[Session Notes]({{ site.baseurl }}{% link docs/session-3.pdf  %})
-
-
-# Exercises
+## After
 
 [Exercises]({{ site.baseurl }}{% link exercises/exercises-session3.pdf  %})
 
-
 # Supplementary Content
 
-1. [Using Gauss-Jordan elimination to reason about linear maps]({{ site.baseurl }}{% link docs/elimination-simple.pdf  %})
+1. [Last year's notes]({{ site.baseurl }}{% link docs/session-3.pdf  %})
+2. [Using Gauss-Jordan elimination to reason about linear maps]({{ site.baseurl }}{% link docs/elimination-simple.pdf
+  %})
