--- a/_posts/2021-11-03-session07.md
+++ b/_posts/2021-11-03-session07.md
@@ -1,17 +1,15 @@
 ---
 layout: post
-title: "<b>session 7: tutorial on orthogonal projections</b>"
+title: "<u>session 7: tutorial on orthogonal projections (remote)</u>"
 tags:
 ---
 
 
-# Instructions
+# Tutorial
 
-[Tutorial on orthogonal projections onto subspaces]({{ site.baseurl }}{% link docs/2-projections_onto_subspaces.html %})
+[Access the tutorial on orthogonal projections onto subspaces]({{ site.baseurl }}{% link docs/2-projections_onto_subspaces.html %})
 
-# Required Tasks
-
-## Material
+# Before the tutorial
 
 - Watch the MIT lectures explaining [projections onto subspaces](https://www.youtube.com/watch?v=Y_Ac6KiQ1t0) and [least squares](https://www.youtube.com/watch?v=osh80YCg_GM).
 - Watch the following Khan Academy videos:
@@ -29,13 +27,12 @@ The majority of the reasoning and examples used in this tutorial come from the 4
 - [matlib](https://cran.r-project.org/web/packages/matlib/index.html)
 - [MASS](https://cran.r-project.org/web/packages/MASS/MASS.pdf)
 
-
-# Tools
+## Check that you can access the shiny app
 
 [Visualization of orthogonal projections in 3D space](https://massonix.shinyapps.io/projections_onto_subspaces/)
 
 
-# Session Notes
+# Supplementary Content
 
-[Session Notes]({{ site.baseurl }}{% link docs/session-7-tutorial-2.pdf %})
+[Last year's notes]({{ site.baseurl }}{% link docs/session-7-tutorial-2.pdf %})
 
