--- a/_posts/2021-11-10-session09.md
+++ b/_posts/2021-11-10-session09.md
@@ -1,14 +1,13 @@
 ---
 layout: post
-title: "session 9: singular value decomposition (SVD)"
+title: "session 9: SVD (remote)"
 tags:
 ---
 
 
 # Topics
 
-
-1. Singular Value Decomposition: 
+1. Singular Value Decomposition (SVD): 
 \[ A=U \Sigma V^t \] 
 2. Singular values, $U$-singular vectors and $V$-singular vectors.
 3. Matrix norms and low-rank approximation of a matrix: Eckart-Young.
@@ -18,21 +17,16 @@ tags:
 5. One-shot reading of a linear map from its SVD: $ N(A) $, $ N(A^t) $, $ C(A) $, $ C(A^t) $.
 
 
-# Required Content
+# Homework
+
+## Before
 
 1. [Singular Value Decomposition](https://www.youtube.com/watch?v=mBcLRGuAFUk)
 2. [SVD Exercise in detail](https://www.youtube.com/watch?v=cOUTpqlX-Xs)
 
-# Session Notes
-
-[Session Notes]({{ site.baseurl }}{% link docs/session-9.pdf  %})
-
-
-# Exercises
-
-
-
 # Supplementary Content
 
-1. [Steve Brunton's series of videos about SVD (advanced)](https://www.youtube.com/watch?v=gXbThCXjZFM&list=PLMrJAkhIeNNSVjnsviglFoY2nXildDCcv)
-2. [Randomized SVD (advanced)](https://gregorygundersen.com/blog/2019/01/17/randomized-svd/)
+1. [Last year's notes]({{ site.baseurl }}{% link docs/session-9.pdf  %})
+2. [Steve Brunton's series of videos about SVD (advanced)](https://www.youtube.com/watch?v=gXbThCXjZFM&list
+=PLMrJAkhIeNNSVjnsviglFoY2nXildDCcv)
+3. [Randomized SVD (advanced)](https://gregorygundersen.com/blog/2019/01/17/randomized-svd/)
