--- a/_posts/2021-11-17-session11.md
+++ b/_posts/2021-11-17-session11.md
@@ -1,11 +1,10 @@
 ---
 layout: post
-title: "session 11: functions in one variable"
+title: "session 11: functions in one variable (remote)"
 tags:
 ---
 
 # Topics
-
 
 1. Motivation for the derivative: from classical statistics to machine learning.
 2. Derivative. Basic properties of the derivative. 
@@ -14,14 +13,16 @@ tags:
 5. Examples: affine functions, polynomials, exponentials, logarithms, rational functions.
 
 
-# Required Content
+# Homework
+
+## Before
 
 1. [The paradox of the derivative (17:56)](https://www.youtube.com/watch?v=9vKqVkMQHKk)
 2. [Another perspective of the derivative (up to 5:40)](https://www.youtube.com/watch?v=CfW845LNObM)
 3. [Derviative formulas through geometry (18:42)](https://www.youtube.com/watch?v=S0_qX4VJhMQ)
 4. [Visualizing the product rule (up to 8:40)](https://www.youtube.com/watch?v=YG15m2VwSjA)
 
-# Session notes
+# Supplementary Content
 
-[Session Notes]({{ site.baseurl }}{% link docs/session-11.pdf  %})
+[Last year's notes]({{ site.baseurl }}{% link docs/session-11.pdf  %})
 
