--- a/_posts/2021-11-29-session14.md
+++ b/_posts/2021-11-29-session14.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "session 14: local approximation and optimization of functions in several variables"
+title: "session 14: local approximation of functions in several variables (on-site)"
 tags:
 ---
 
@@ -16,14 +16,13 @@ tags:
 3. Hessian matrix and quadratic approximations.
 4. Classification of critical points.
 
+# Homework
 
-# Session Notes
-
-[Session Notes]({{ site.baseurl }}{% link docs/session-14.pdf %})
-
-# Exercises
+## After
 
 [Exercises]({{ site.baseurl }}{% link exercises/exercises-session-14.pdf %})
 
-
 # Supplementary Content
+
+[Last year's notes]({{ site.baseurl }}{% link docs/session-14.pdf %})
+
