--- a/_posts/2021-12-01-session15.md
+++ b/_posts/2021-12-01-session15.md
@@ -1,16 +1,16 @@
 ---
 layout: post
-title: "<b>session 15: tutorial on MLE and regression</b>"
+title: "<u>session 15: tutorial on MLE and regression (on-site)</u>"
 tags:
 ---
 
-# Instructions
+# Tutorial
 
 1. [Tutorial (HTML)]({{ site.baseurl }}{% link docs/4-mle_and_regression.html %})
 2. [Tutorial code (Rmd)]({{ site.baseurl }}{% link docs/4-mle_and_regression.Rmd %})
 
 
-# Requirements
+# Before the tutorial
 
 ## Packages
 
@@ -20,8 +20,8 @@ Make sure to have the following packages installed:
 - [rootSolve](https://cran.r-project.org/web/packages/rootSolve/vignettes/rootSolve.pdf)
 
 
-# Session Notes
+# Supplementary Content
 
-[Session Notes]({{ site.baseurl }}{% link docs/session-15.pdf %})
+[Last year's notes]({{ site.baseurl }}{% link docs/session-15.pdf %})
 
 
