--- a/_posts/2021-11-24-session13.md
+++ b/_posts/2021-11-24-session13.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "session 13: multivariable calculus"
+title: "session 13: functions in several variables (on-site)"
 tags:
 ---
 
@@ -12,14 +12,11 @@ tags:
 4. Gradient
 5. Examples
 
-# Required Content
+# Homework
+
+## Before
 
 1. [Introduction to  Multivariable Calculus (6:38)](https://www.youtube.com/watch?v=TrcCbdWwCBc&list=PLSQl0a2vh4HC5feHa6Rc5c0wbRTx56nF7)
 2. [Interpreting graphs with slices (5:37)](https://www.youtube.com/watch?v=E9bAwP7iK80&list=PLSQl0a2vh4HC5feHa6Rc5c0wbRTx56nF7&index=4)
 3. [Introduction to partial derivatives (10:55)](https://www.youtube.com/watch?v=AXqhWeUEtQU&list=PLSQl0a2vh4HC5feHa6Rc5c0wbRTx56nF7&index=15)
 4. [Partial derivatives and graphs (6:54)](https://www.youtube.com/watch?v=dfvnCHqzK54&list=PLSQl0a2vh4HC5feHa6Rc5c0wbRTx56nF7&index=16)
-
-# Exercises
-
-
-# Supplementary Content
