UPDATE: course content (2021-2022 course)

--- a/_posts/2021-10-13-session02.md
+++ b/_posts/2021-10-13-session02.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "session 2: matrices are linear transformations (remote)"
+title: "2: matrices are linear transformations"
 tags:
 ---
 
