--- a/_posts/2021-10-18-session03.md
+++ b/_posts/2021-10-18-session03.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "session 3: dissecting linear transformations (remote)"
+title: "3: dissecting linear transformations"
 tags:
 ---
 
@@ -30,3 +30,4 @@ tags:
 1. [Last year's notes]({{ site.baseurl }}{% link docs/session-3.pdf  %})
 2. [Using Gauss-Jordan elimination to reason about linear maps]({{ site.baseurl }}{% link docs/elimination-simple.pdf
   %})
+3. [Trick to compute determinants](https://twitter.com/theAlbertChern/status/1396704566989660161?s=20)
