--- a/_posts/2021-10-25-session05.md
+++ b/_posts/2021-10-25-session05.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "session 5: encoding and decoding with matrices (remote)"
+title: "5: encoding and decoding with matrices"
 tags:
 ---
 
