--- a/_posts/2021-11-03-session07.md
+++ b/_posts/2021-11-03-session07.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "<u>session 7: tutorial on orthogonal projections (remote)</u>"
+title: "<u>7: tutorial on orthogonal projections</u>"
 tags:
 ---
 
