--- a/_posts/2021-11-22-session12.md
+++ b/_posts/2021-11-22-session12.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "session 12: local approximation of functions in one variable (remote)"
+title: "12: local approximation of functions in one variable"
 tags:
 ---
 
