--- a/_posts/2021-11-24-session13.md
+++ b/_posts/2021-11-24-session13.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "session 13: functions in several variables (on-site)"
+title: "13: functions in several variables"
 tags:
 ---
 
