--- a/_posts/2021-11-29-session14.md
+++ b/_posts/2021-11-29-session14.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "session 14: local approximation of functions in several variables (on-site)"
+title: "14: local approximation of functions in several variables"
 tags:
 ---
 
