--- a/_posts/2021-12-01-session15.md
+++ b/_posts/2021-12-01-session15.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "<u>session 15: tutorial on MLE and regression (on-site)</u>"
+title: "<u>15: tutorial on MLE and regression</u>"
 tags:
 ---
 
