--- a/_posts/2021-10-20-session04.md
+++ b/_posts/2021-10-20-session04.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "<u>session 4: tutorial on linear maps (remote)</u>"
+title: "<u>4: tutorial on linear maps</u>"
 tags:
 ---
 
