--- a/_posts/2021-11-10-session09.md
+++ b/_posts/2021-11-10-session09.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "session 9: SVD (remote)"
+title: "9: SVD"
 tags:
 ---
 
@@ -29,4 +29,5 @@ tags:
 1. [Last year's notes]({{ site.baseurl }}{% link docs/session-9.pdf  %})
 2. [Steve Brunton's series of videos about SVD (advanced)](https://www.youtube.com/watch?v=gXbThCXjZFM&list
 =PLMrJAkhIeNNSVjnsviglFoY2nXildDCcv)
+3. In particular [how to use the singular value decomposition (SVD) to perform least-squares regression for non-square systems of equations](https://t.co/rDggVKd8jz?amp=1)
 3. [Randomized SVD (advanced)](https://gregorygundersen.com/blog/2019/01/17/randomized-svd/)
