--- a/_posts/2021-11-15-session10.md
+++ b/_posts/2021-11-15-session10.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "<u>session 10: tutorial on PCA (remote)</u>"
+title: "<u>10: tutorial on PCA</u>"
 tags:
 ---
 
@@ -12,4 +12,6 @@ tags:
 # Supplementary Content
 
 [Last year's notes]({{ site.baseurl }}{% link docs/session-10.pdf %})
+[PCA resulting from a game](https://deepmind.com/blog/article
+/EigenGame).
 
