ADD: tutorial code links

--- a/_posts/2021-11-03-session07.md
+++ b/_posts/2021-11-03-session07.md
@@ -7,7 +7,8 @@ tags:
 
 # Tutorial
 
-[Access the tutorial on orthogonal projections onto subspaces]({{ site.baseurl }}{% link docs/2-projections_onto_subspaces.html %})
+Tutorial on orthogonal projections onto subspaces ([HTML]({{ site.baseurl }}{% link docs/2-projections_onto_subspaces.html %}),
+[Rmd](https://github.com/massonix/math_teaching/blob/master/notebooks/2-projections_onto_subspaces.Rmd))
 
 # Before the tutorial
 
