--- a/_posts/2021-11-15-session10.md
+++ b/_posts/2021-11-15-session10.md
@@ -6,7 +6,8 @@ tags:
 
 # Tutorial
 
-[Access the tutorial on PCA]({{ site.baseurl }}{% link docs/3-principal_component_analysis_in_bioinformatics.html %})
+Tutorial on PCA ([HTML]({{ site.baseurl }}{% link docs/3-principal_component_analysis_in_bioinformatics.html %}), 
+[Rmd](https://github.com/massonix/math_teaching/blob/master/notebooks/3-principal_component_analysis_in_bioinformatics.Rmd))
 
 
 # Supplementary Content
