--- a/_posts/2021-10-20-session04.md
+++ b/_posts/2021-10-20-session04.md
@@ -6,7 +6,9 @@ tags:
 
 # Tutorial
 
-[Access the tutorial on linear maps]({{ site.baseurl }}{% link docs/1-linear_transformations.html %})
+Tutorial on linear transformations ([HTML]({{ site.baseurl }}{% link docs/1-linear_transformations.html %}), 
+[Rmd](https://github.com/massonix/math_teaching/blob/master/notebooks/1-linear_transformations.Rmd))
+
 
 # Before the tutorial
 
