--- a/_posts/2021-11-08-session08.md
+++ b/_posts/2021-11-08-session08.md
@@ -20,6 +20,10 @@ tags:
 
 [3Blue1Brown: Eigenvectors and eigenvalues (17:15)](https://www.youtube.com/watch?v=PFDu9oVAE-g)
 
+## After
+
+[Exercises]({{ site.baseurl }}{% link exercises/exercises-session-8.pdf  %})
+
 # Supplementary Content
 
 1. [Last year's notes]({{ site.baseurl }}{% link docs/session-8.pdf  %})
