FIX: typo in PCA tutorial page

--- a/_posts/2021-11-15-session10.md
+++ b/_posts/2021-11-15-session10.md
@@ -12,7 +12,8 @@ Tutorial on PCA ([HTML]({{ site.baseurl }}{% link docs/3-principal_component_ana
 
 # Supplementary Content
 
-[Last year's notes]({{ site.baseurl }}{% link docs/session-10.pdf %})
-[PCA resulting from a game](https://deepmind.com/blog/article
+1. [Last year's notes]({{ site.baseurl }}{% link docs/session-10.pdf %})
+
+2. [PCA from a game-theoretical perpective](https://deepmind.com/blog/article
 /EigenGame).
 
