--- a/_posts/2022-10-19-session06.md
+++ b/_posts/2022-10-19-session06.md
@@ -20,7 +20,7 @@ tags:
 ## Before
 
 [Projection matrices and leasts squares (48:04)](https://www.youtube.com/watch?v=osh80YCg_GM).
-You might watch this video in full as it is all relevant to the course, particularly for [session 7]({{ site.baseurl }}{% link _posts/2021-11-03-session07.md %}). In case you do not have a lot of time, you can jump to timestamp <u>36:55</u> directly and watch till the end.
+You might watch this video in full as it is all relevant to the course, particularly for the next seesion. In case you do not have a lot of time, you can jump to timestamp <u>36:55</u> directly and watch till the end.
 
 ## After
 
