Update content fall 2023-2024

--- a/_posts/2023-10-05-session01.md
+++ b/_posts/2023-10-05-session01.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "1: vectors and vector spaces"
+title: "1: Vector spaces"
 tags:
 ---
 
@@ -15,31 +15,25 @@ tags:
 
 # Topics
 
-1. Vectors and vector spaces.
-2. Sum of vectors; product of a vector by a scalar.
-3. Thinking geometrically: lengths and angles.
-4. Linear combinations.
-5. Two vector subspace constructions:
-   1. Spans: vector subspaces spanned by a collection of vectors
-   2. Solution to system of homogeneous equations
-6. Linear independence.
-7. Basis and dimension of vector spaces.
-
+1. Vectors.
+2. Vector spaces.
+3. Linear independence.
+4. Generating set of a vector space.
+5. Basis and dimension of a vector space.
+6. Coordinates of a vector in a basis.
 
 # Homework
-
-## Before
 
 1. [Vectors, what even are they? (9:52)](https://www.youtube.com/watch?v=fNk_zzaMoSs&list=PLZHQObOWTQDPD3MizzM2xVFitgF8hE_ab&index=1&t=424s)
 2. [Linear combinations, span, and basis vectors (9:59)](https://www.youtube.com/watch?v=k7RM-ot2NWY&list=PLZHQObOWTQDPD3MizzM2xVFitgF8hE_ab&index=2)
 
-## After
+# Lecture Notes
 
-[Exercises]({{ site.baseurl }}{% link exercises/exercises-session1.pdf %})
+<!-- [Exercises]({{ site.baseurl }}{% link exercises/exercises-session1.pdf %}) -->
 
 # Supplementary Content
 
-1. [Last year's notes]({{ site.baseurl }}{% link docs/session-1-20201014.pdf %})
+<!-- 1. [Last year's notes]({{ site.baseurl }}{% link docs/session-1-20201014.pdf %}) -->
 1. [A 2020 Vision of Linear Algebra (video series)](https://ocw.mit.edu/resources/res-18-010-a-2020-vision-of-linear-algebra-spring-2020/videos). The Linear Algebra part of this course is very much inspired by the 
 online lectures taught by Gilbert Strang. This is an ultra-condensed summary of everything that we will cover through 
 sessions 1-10. Recommended as wide overview-recap.
