--- a/_posts/2023-10-16-session04.md
+++ b/_posts/2023-10-16-session04.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "<u>4: tutorial on linear maps</u>"
+title: "<u>4: Linear maps (tutorial)</u>"
 tags:
 ---
 
@@ -33,7 +33,7 @@ Make sure to be well prepared for the session.
 - [Seurat](https://cran.r-project.org/web/packages/Seurat/index.html)
 - [SeuratData](https://github.com/satijalab/seurat-data)
 
-## Check that you can access the shiny app
+## Check that you have access to the shiny app
 
 [https://massonix.shinyapps.io/linear_transformations/](https://massonix.shinyapps.io/linear_transformations/)
 
