--- a/_posts/2023-10-30-session08.md
+++ b/_posts/2023-10-30-session08.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "<u>7: tutorial on orthogonal projections</u>"
+title: "<u>8: Orthogonal projections (tutorial)</u>"
 tags:
 ---
 
@@ -32,8 +32,7 @@ The majority of the reasoning and examples used in this tutorial come from the 4
 
 [Visualization of orthogonal projections in 3D space](https://massonix.shinyapps.io/projections_onto_subspaces/)
 
-
 # Supplementary Content
 
-[Last year's notes]({{ site.baseurl }}{% link docs/session-7-tutorial-2.pdf %})
+<!-- [Last year's notes]({{ site.baseurl }}{% link docs/session-7-tutorial-2.pdf %}) -->
 
