--- a/_posts/2023-11-15-session13.md
+++ b/_posts/2023-11-15-session13.md
@@ -1,22 +1,22 @@
 ---
 layout: post
-title: "13: functions in several variables"
+title: "13: Functions in many variables"
 tags:
 ---
 
 # Topics
 
-1. Representation of multivariable function
-2. Surfaces and Level curves
-3. Partial derivatives
-4. Gradient
-5. Examples
+1. Representation of multivariable functions.
+2. Surfaces and level curves.
+3. Partial derivatives.
+4. Gradient.
 
-# Homework
 
-## Before
+# Before
 
 1. [Introduction to  Multivariable Calculus (6:38)](https://www.youtube.com/watch?v=TrcCbdWwCBc&list=PLSQl0a2vh4HC5feHa6Rc5c0wbRTx56nF7)
 2. [Interpreting graphs with slices (5:37)](https://www.youtube.com/watch?v=E9bAwP7iK80&list=PLSQl0a2vh4HC5feHa6Rc5c0wbRTx56nF7&index=4)
 3. [Introduction to partial derivatives (10:55)](https://www.youtube.com/watch?v=AXqhWeUEtQU&list=PLSQl0a2vh4HC5feHa6Rc5c0wbRTx56nF7&index=15)
 4. [Partial derivatives and graphs (6:54)](https://www.youtube.com/watch?v=dfvnCHqzK54&list=PLSQl0a2vh4HC5feHa6Rc5c0wbRTx56nF7&index=16)
+
+# Lecture Notes
