--- a/_posts/2023-11-22-session15.md
+++ b/_posts/2023-11-22-session15.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "<u>15: tutorial on MLE and regression</u>"
+title: "<u>15: Regression (tutorial)</u>"
 tags:
 ---
 
@@ -22,6 +22,6 @@ Make sure to have the following packages installed:
 
 # Supplementary Content
 
-[Last year's notes]({{ site.baseurl }}{% link docs/session-15.pdf %})
+<!-- [Last year's notes]({{ site.baseurl }}{% link docs/session-15.pdf %}) -->
 
 
