--- a/_posts/2023-11-06-session10.md
+++ b/_posts/2023-11-06-session10.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "<u>10: tutorial on PCA</u>"
+title: "<u>10: Principal Component Analysis (tutorial)</u>"
 tags:
 ---
 
@@ -12,8 +12,8 @@ Tutorial on PCA ([HTML]({{ site.baseurl }}{% link docs/3-principal_component_ana
 
 # Supplementary Content
 
-1. [Last year's notes]({{ site.baseurl }}{% link docs/session-10.pdf %})
+<!-- 1. [Last year's notes]({{ site.baseurl }}{% link docs/session-10.pdf %}) -->
 
-2. [PCA from a game-theoretical perpective](https://deepmind.com/blog/article
+1. [PCA from a game-theoretical perpective](https://deepmind.com/blog/article
 /EigenGame).
 
