POST lecture notes and exercises 1-3

--- a/_posts/2023-10-09-session02.md
+++ b/_posts/2023-10-09-session02.md
@@ -21,7 +21,11 @@ tags:
 
 # Lecture Notes
 
-<!-- [Exercises]({{ site.baseurl }}{% link exercises/exercises-session2.pdf %}) -->
+[Lecture Notes]({{ site.baseurl }}{% link lecture-notes/lecture02.pdf %})
+
+# Exercises
+
+[Exercises]({{ site.baseurl }}{% link exercises/exercises-session2.pdf %})
 
 # Supplementary Content
 
