--- a/_posts/2023-10-11-session03.md
+++ b/_posts/2023-10-11-session03.md
@@ -21,7 +21,11 @@ tags:
 
 # Lecture Notes
 
-<!-- [Exercises]({{ site.baseurl }}{% link exercises/exercises-session3.pdf  %}) -->
+[Lecture Notes]({{ site.baseurl }}{% link lecture-notes/lecture03.pdf  %})
+
+# Exercises
+
+[Exercises]({{ site.baseurl }}{% link exercises/exercises-session3.pdf  %})
 
 # Supplementary Content
 
