--- a/_posts/2023-10-05-session01.md
+++ b/_posts/2023-10-05-session01.md
@@ -29,7 +29,11 @@ tags:
 
 # Lecture Notes
 
-<!-- [Exercises]({{ site.baseurl }}{% link exercises/exercises-session1.pdf %}) -->
+[Lecture Notes]({{ site.baseurl }}{% link lecture-notes/lecture01.pdf %})
+
+# Exercises
+
+[Exercises]({{ site.baseurl }}{% link exercises/exercises-session1.pdf %})
 
 # Supplementary Content
 
