UPDATE tutorial on linear transformations plus sessions 5 and 6

--- a/_posts/2023-10-16-session04.md
+++ b/_posts/2023-10-16-session04.md
@@ -7,7 +7,7 @@ tags:
 # Tutorial
 
 Tutorial on linear transformations ([HTML]({{ site.baseurl }}{% link docs/1-linear_transformations.html %}), 
-[Rmd](https://github.com/massonix/math_teaching/blob/master/notebooks/1-linear_transformations.Rmd))
+[Rmd]({{site.baseurl}}{% link notebooks/1-linear_transformations.Rmd %}))
 
 
 # Before the tutorial
