--- a/_posts/2023-10-18-session05.md
+++ b/_posts/2023-10-18-session05.md
@@ -17,10 +17,14 @@ tags:
 
 # Lecture Notes
 
-<!-- 1. [Exercises]({{ site.baseurl }}{% link exercises/exercises-session5.pdf  %}) -->
+[Lecture Notes]({{ site.baseurl }}{% link lecture-notes/lecture05.pdf  %})
 
-<!-- 1. [Solution to Exercise 6]({{ site.baseurl }}{% link exercises/exercise-6-session-5.pdf  %}) -->
+# Exercises
 
-# Supplementary Content
+1. [Exercises]({{ site.baseurl }}{% link exercises/exercises-session5.pdf  %})
+
+2. [Solution to Exercise 6]({{ site.baseurl }}{% link exercises/exercise-6-session-5.pdf  %})
+
+<!-- # Supplementary Content -->
 
 <!-- [Last year's notes]({{ site.baseurl }}{% link docs/session-5-20201028-2.pdf  %}) -->
