--- a/_posts/2023-10-23-session06.md
+++ b/_posts/2023-10-23-session06.md
@@ -18,15 +18,16 @@ tags:
 
 # Homework
 
-## Before
-
 [Projection matrices and leasts squares (48:04)](https://www.youtube.com/watch?v=osh80YCg_GM).
 You might watch this video in full as it is all relevant to the course, particularly for the next seesion. In case you do not have a lot of time, you can jump to timestamp <u>36:55</u> directly and watch till the end.
 
-## After
+# Lecture Notes
 
-<!-- [Exercises]({{ site.baseurl }}{% link exercises/exercises-session-6.pdf  %}) -->
+[Lecture Notes]({{ site.baseurl }}{% link lecture-notes/lecture06.pdf  %})
 
+# Exercises
+
+[Exercises]({{ site.baseurl }}{% link exercises/exercises-session-6.pdf  %})
 
 # Supplementary Content
 
