--- a/notebooks/1-linear_transformations.Rmd
+++ b/notebooks/1-linear_transformations.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Hands on session 1: Linear Transformations"
-author: "Ferran Muiños and Ramon Massoni-Badosa"
-date: "7/2/2020"
+author: "Ferran Muiños, Ramon Massoni-Badosa and Paula Gomis"
+date: "10/10/2023"
 output: 
   BiocStyle::html_document:
     toc: true
@@ -10,6 +10,7 @@ output:
 ---
 
 ```{r setup, include=FALSE}
+library(knitr) 
 knitr::opts_chunk$set(echo = TRUE, out.width = "100%", fig.align='center', 
                       message=FALSE, warning = FALSE)
 options(width = 1200)
@@ -23,33 +24,51 @@ This session will focus on linear maps. Specifically, we aim to accomplish the f
 2. Create, subset, join, operate and visualize matrices in R.
 
 
-# Pre-requisites
+<!-- # Revision of pre-requisites -->
 
-Checkout the pre-requisites in the course website.
+<!-- Checkout the pre-requisites in the course website. -->
 
 
-# Revision of key concepts
 
-## Linear transformations
+# Linear transformations
 
 Simply put, we can think of a transformation as a function or program: something that takes an input vector and "spits" an output vector. Such a transformation is deemed "linear" if it fulfills two additional requirements:
+
+
 
 1. Applying the transformation of a sum of vectors gives the same result as applying the sum of the respective transformations:
 
 $$
 L(u + v) = L(u) + L(v)
 $$
+
 2. Scaling a vector by a scalar $\lambda$ then applying the transformation gives the same result as applying the transformation of the vector first then scaling the result by $\lambda$:
 
 $$
 L(\lambda u) = \lambda L(u)
 $$
 
+In particular, applying a linear transformation to the zero vector gives always the zero vector as result.
+$$
+L(\vec{0})=\vec{0}
+$$
+&nbsp;
+
+
+As we have previously studied, linear maps can be represented with matrices. To obtain the result of applying the transformation to a vector, we just need to multiply the matrix associated to the linear map with the vector.
+
+$$
+L(u)= Au 
+$$
 
 ```{r echo=FALSE}
 x <- matrix(c("u1", "u2"), nrow = 2)
 i_hat <- matrix(c(1, 0), nrow = 2)
 j_hat <- matrix(c(0, 1), nrow = 2)
+
+i_hat_r <- matrix(c(2,0), nrow=2)
+j_hat_r <- matrix(c(2,1), nrow=2)
+
 write_matex2 <- function(x) {
   begin <- "\\begin{bmatrix}"
   end <- "\\end{bmatrix}"
@@ -64,60 +83,176 @@ write_matex2 <- function(x) {
 }
 ```
 
-To illustrate this, consider the following vector $u = `r write_matex2(x)`$, which can be expressed as a linear combination of the canonical basis vectors:
+
+Let us see an example:
+
+
+```{r echo=FALSE}
+E1 <- matrix(c(2, 0, 2, 1), 2, 2, byrow = FALSE)
+v1 <- matrix(c(1,3), nrow=2)
+v1r <- matrix(c(8,3), nrow=2)
+```
+
+We will consider the following matrix to define a linear map: 
+
+$$
+A = `r write_matex2(E1)`
+$$
+
+And the following vector:
+$$
+u = `r write_matex2(v1)`
+$$
+
+We obtain the result of applying the transformation to a vector by multiplying the matrix associated to the linear map with the vector.
+
+$$
+L(u)= Au = `r write_matex2(E1)``r write_matex2(v1)`=`r write_matex2(v1r)`
+$$
+
+
+In fact, each of the column vectors of the matrix are the output vector when we apply the transformation to each of the canonical basis vectors.
+
+
+
+$$
+`r write_matex2(E1)``r write_matex2(i_hat)`=`r write_matex2(i_hat_r)`  \hspace{15pt}  and   \hspace{15pt}
+`r write_matex2(E1)``r write_matex2(j_hat)`=`r write_matex2(j_hat_r)`
+$$
+
+&nbsp;
+
+&nbsp;
+
+
+We can think of linear transformations as linear combinations of the column vectors of the matrix. 
+
+To illustrate this, consider the following vector $u = `r write_matex2(x)` \in R^2$, which can be expressed as a linear combination of the vectors of the canonical basis:
 
 $$
 u = u_1 `r write_matex2(i_hat)` + u_2 `r write_matex2(j_hat)`
 $$
 
-Let us take the linear transformation L of the vector u and apply the two properties of linear transformations:
+Let us take the linear transformation $L$ of the vector $u$ and apply the two above mentioned properties of linear transformations:
 
 $$
 L(u) = L \left( u_1 `r write_matex2(i_hat)` + u_2 `r write_matex2(j_hat)`\right) = L \left(u_1 `r write_matex2(i_hat)`\right) + L \left(u_2 `r write_matex2(j_hat)`\right) = u_1 L\left(`r write_matex2(i_hat)`\right) + u_2 L\left(`r write_matex2(j_hat)`\right)
 $$
 
-From the last result, we can deduce two key facts:
+&nbsp;
 
-1. Linear transformations are completely determined by where the basis vectors "land".
-2. Linear transformation can be expressed as a matrix-vector product (Ax = b).
 
-The (2) fact can be expressed as follows:
-
+In our example: 
 $$
-Ax = b
+u = `r write_matex2(v1)` = 1 `r write_matex2(i_hat)` + 3 `r write_matex2(j_hat)`
 $$
 $$
-x_1 a_1 + x_2 a_2 = b
+L(u) = 1 L\left(`r write_matex2(i_hat)`\right) + 3 L\left(`r write_matex2(j_hat)`\right) = 
+1 `r write_matex2(i_hat_r)` + 3 `r write_matex2(j_hat_r)` = `r write_matex2(v1r)`
 $$
-Where a<sub>1</sub> and a<sub>2</sub> are the column vectors of A (transformed basis vectors), x is the input vector and b is the output vector.
 
+&nbsp; 
+
+
+**We can conclude that:**
+
+1. Linear transformations can be expressed as a matrix-vector product.
+
+$$
+L(u) = Au
+$$
+
+2. Linear transformations are completely determined by the transformations of the vectors of the canonical basis.
+
+$$
+L(u) = u_1 L(e_1) + u_2 L(e_2)
+$$
+
+```{r echo=FALSE}
+v2 <- matrix(c(5,6), nrow = 2)
+B <- matrix(c(2, -1, 5, 3), nrow = 2, ncol = 2, byrow = FALSE)
+```
+**Exercise** 
+
+1. Calculate the transformation of the vector $v = `r write_matex2(v2)` \in R^2$ with the linear map defined with the matrix $B$.
+$$
+B = `r write_matex2(B)`
+$$
+
+2. Determine if the following vector functions are linear transformations:
+
+- $F_1(u_1,u_2)=(u_1+u_2,2u_1)$
+- $F_2(u_1,u_2)=(0,1)$
+- $F_3(u_1,u_2,u_3)=(0,0)$
+- $F_4(u_1,u_2)=(u_1^2, u_1-u_2)$
+- $F_5(u_1,u_2)=(u_1 \cos(\pi/4)-u_2 \sin(\pi/4),u_1 \sin(\pi/4)+u_2 \cos(\pi/4))$
+- $F_6(u_1,u_2)=(u_1+2,2u_1,0)$
+
+
+
+
+&nbsp;
+
+&nbsp;
 
 ## Important definitions
 
-Given a matrix A, we can attach different concepts to it:
+Given an $n\times n$ matrix $A$, we can define different concepts associated to it:
 
-* **Column space**: vector space spanned by the column vectors of A, denoted C(A).
-* **Rank**: number of linearly independent columns of A, which coincides with the dimension of C(A).
-* **Determinant**: factor by which a unit of length (n=1), area (n=2) or volume (n=3) is multiplied after transforming the space with the linear transformation encoded by A.
-* **Inverse matrix**: matrix that undoes that what A accomplishes via matrix multiplication; i.e., if Ax = b, A^-1^b = x.
-* **Null space**: vector space comprising all the vectors x such that Ax = 0; i.e., the set of vectors that are mapped to 0 by the linear transformation encoded by A.
+* **Column space**: vector space spanned by the column vectors of $A$, denoted $C(A)$.
+* **Rank**: number of linearly independent columns of $A$, which coincides with the dimension of $C(A)$ and the dimension of $R(A)$.
+* **Determinant**: scalar value that can be calculated recursively based on the elements of the matrix (see chapter 3 of the course notes).<br> It has the following property: the determinant is the factor by which a unit of length (n=1), area (n=2) or volume (n=3) is multiplied after transforming the space with the linear transformation encoded by $A$.
+* **Inverse matrix**: matrix that, when multiplied with the original matrix, results in the identity matrix. If $A^{-1}$ is the inverse matrix of A, then $AA^{-1} = A^{-1}A = I$.
+* **Null space**: denoted as $N(A)$ is the vector space of all vectors that are transformed to the zero-vector by means of $A$. In other words:
 
-Again, the main objective is **to develop the geometric intuition of linear transformations to see how all these concepts are connected**:
-![](../img/linear_transformations_shed_light.png)
-
-There are two of these relations that are useful to understand algebraically:
-
-1. Relation between rank and dim(N(A)):
-
-A matrix A is full rank (which also means that all column vectors are linearly independent) if and only if the null space is the zero vector space. You can find the proof of this theorem in the [Khan Academy](https://en.khanacademy.org/) videos in the prerequisites sections.
-
-In a more condensed notation:
 $$
-a_1, \ldots, a_n \hspace{0.2cm} \textrm{are linearly independent} \Longleftrightarrow N(A) = \{0\} 
+N(A) = \left\{ w \in \mathbb{R}^n \hspace{5pt} |\hspace{5pt} Aw = \vec{0} \right\}
 $$
-2. Relation between dim(N(A)) and invertibility:
 
-If A is a square matrix, A is invertible if and only if the null space is the zero vector space. You can find the proof of this theorem in the [third lecture](https://www.youtube.com/watch?v=FX4C-JpTFgY) (timestamps: 27:56-31:50) of the MIT course in linear algebra, by Gilbert Strang.
+![](../images/shed_light.png)
+
+<!-- Again, the main objective is **to develop the geometric intuition of linear transformations to see how all these concepts are connected**: -->
+
+<!-- There are two of these relations that are useful to understand algebraically: -->
+
+<!-- 1. Relation between rank and dim(N(A)): -->
+## Important relations
+
+**Fundamental Theorem of Linear Algebra**
+
+For any $n$ x $m$ matrix $A$,
+$$
+dim(C(A)) + dim(N(A)) = m
+$$
+
+**Other relations**
+
+An $n$ x $m$ matrix **$A$ is full rank if and only if the null space is the zero vector space**. Remember that a matrix is full rank also means that all column vectors are linearly independent. 
+
+In a more condensed notation, if $\hspace{2pt} a_1, \ldots, a_m$ are the column vectors of $A$, then:
+$$
+a_1, \ldots, a_m \hspace{0.2cm} \textrm{are linearly independent} \Longleftrightarrow N(A) = \{\vec{0}\} 
+$$
+
+You can find the proof of this theorem in the [Khan Academy](https://en.khanacademy.org/math/linear-algebra/vectors-and-spaces/null-column-space/v/null-space-3-relation-to-linear-independence) videos in the prerequisites sections.
+
+&nbsp;
+
+Additionally, if the matrix **$A$ is a square matrix** of size $n$, the following are equivalent (see chapter 3 of the course notes): 
+
+<!-- 2. Relation between dim(N(A)) and invertibility: -->
+
+- $A$ is full rank, that means that all the column vectors are linearly independent.
+- $N(A) = \{\vec{0}\}$ which means that $dim(N(A))=0$
+- $det(A) \neq 0$
+- $A$ is invertible
+- The columns of $A$ are a basis of $\mathbb{R}^n$
+- The rows of $A$ are a basis of $\mathbb{R}^n$
+
+If the **matrix is not full rank** then $det(A)=0$ and $dim(N(A))>0$. 
+
+&nbsp;
+
 
 
 # Shiny app walkthrough
@@ -128,15 +263,22 @@ Herein, we will walk you through our shiny app that will allow you to fully unde
 
 As you can see, there are 4 tabs:
 
-1. Visualization, which has two components. Visualization, which has two components. First there is an input box where the user should
-specify the number of dimensions and the matrix A that defines the linear transformation. Second there is
+1. **Visualization**, which has two components:
+    - First there is an input box where the user should
+specify the dimension and the matrix A that defines the linear transformation. 
+    - Second there is
 the plot pane that shows the input and the output of the transformation.
-2. Gauss-Jordan. It contains a calculator that performs Gauss-Jordan elimination column-wise. The algorithm can be run either step-wise or fast-forwarded to the final result. As expected, it gives us two outputs: column echelon form (top) and transformation matrix (bottom). With this tab you can get an intuition of the Fundamental Theorem of Linear Algebra.
-3. Null Space. It calculates and represents the null space of the input matrix.
-4. Determinant. It calculates the determinant of the input matrix.
+2. **Gauss-Jordan**. 
+    - It contains a calculator that performs Gauss-Jordan elimination column-wise. The algorithm can be run either step-wise or fast-forwarded to the final result. 
+    - It provide us with two outputs: column echelon form (top) and transformation matrix (bottom). 
+    - With this tab you can get an intuition of the Fundamental Theorem of Linear Algebra.
+3. **Null Space**. It calculates and represents the null space of the input matrix.
+4. **Determinant**. It calculates the determinant of the input matrix.
 
-To illustrate how all these concepts are connected, we start by fixing the rank (number of linearly independent columns) and see how that affects the rest of properties. We will use the following example matrices:
+<!-- To illustrate how all these concepts are connected, we start by fixing the rank (number of linearly independent columns) and see how that affects the rest of properties. We will use the following example matrices: -->
 
+**Exercise** <br>
+Calculate the column space, rank, determinant, inverse matrix and null space of the following matrices and check the previous concepts. 
 
 ```{r echo=FALSE}
 E1 <- matrix(c(-2, 0, 0, -2), 2, 2, byrow = FALSE)
@@ -156,10 +298,10 @@ $$
 E3 = `r write_matex2(E3)`
 $$
 
-After this, you should realize two important connections:
+<!-- After this, you should realize two important connections: -->
 
-1. If the matrix is not full rank the determinant is 0
-2. dim(C(A)) + dim(N(A)) = n
+<!-- 1. If the matrix is not full rank the determinant is 0 -->
+<!-- 2. dim(C(A)) + dim(N(A)) = n -->
 
 
 # Reverse engineer linear transformations
@@ -168,21 +310,23 @@ After this, you should realize two important connections:
 
 **Exercise: find the matrix that describes the following transformations of 2D space:**
 
-1. expands all lengths by a factor of 2 in all axes;
-2. shrinks all lengths by a factor of 1/3;
-3. rotates all vectors by $\pi/6$ radians (30 degrees) about the origin (hint: use [unit circle](https://en.wikipedia.org/wiki/Unit_circle) and this [trigonometry calculator](https://www.rapidtables.com/calc/math/trigonometry-calculator.html)).
-4. reflects all vectors about the y-axis.
-5. projects all vectors onto the x-axis.
+Remember that to find the matrix associated to the transformation you only need to find the transformations of the basis vectors. 
+
+1. Expands all lengths by a factor of 2 in all axes;
+2. Shrinks all lengths by a factor of 1/3;
+3. Rotates all vectors by $\pi/3$ radians (60 degrees) about the origin (hint: use [unit circle](https://en.wikipedia.org/wiki/Unit_circle) and this [trigonometry calculator](https://www.rapidtables.com/calc/math/trigonometry-calculator.html)).
+4. Reflects all vectors about the $y$-axis.
+5. Projects all vectors onto the $x$-axis.
 
 **Exercise: find the matrix that describes the following transformations of 3D space:**
 
-1. expands all lengths by a factor of 2 in all axes;
-2. shrinks all lengths by a factor of 1/2;
-3. reflects all vectors with respect to the {x,y} plane;
-4. projects all vectors onto the {x,z} plane;
-5. rotates all vectors by $\pi/3$ radians (60 degrees) around the z-axis (hint: use unit circle)
+1. Expands all lengths by a factor of 2 in all axes;
+2. Shrinks all lengths by a factor of 1/2;
+3. Reflects all vectors with respect to the $\{x,y\}$ plane;
+4. Projects all vectors onto the $\{x,z\}$ plane;
+5. Rotates all vectors by $\pi/6$ radians (30 degrees) around the $z$-axis (hint: use unit circle)
 
-For each transformation, you should answer these questions:
+**For each transformation, you should answer these questions:**
 
 - Are the column vectors linearly independent?
 - Is the matrix invertible?
@@ -194,29 +338,39 @@ to tell us which matrices you guessed.
 
 ## Composition of basic transformations
 
-Importantly, you can think of matrix multiplication as composition of transformations. In other words, whenever you are considering a product of matrices C=AB as a single transformation:
+If we have two matrices $A\in \mathbb{R}^{m\times n}$ and $B\in \mathbb{R}^{k\times m}$ associated to two linear transformations, then $C=BA\in \mathbb{R}^{k\times n}$ encodes the linear transformation obtained when applying first the transformation of $A$ and then the transformation of $B$. 
+<!-- In other words, whenever you are considering a product of matrices $C=AB$ as a single transformation: -->
+
+<!-- $$ -->
+<!-- Cx = (AB)x = y -->
+<!-- $$ -->
+
+<!-- In other words, the transformation $C$ is encoding the concatenation of the transformation $A$ after $B$, in the sense that first x is the input of $B$, and then the output is the input of A: -->
 
 $$
-Cx = (AB)x = y
+u \stackrel{A}{\longmapsto} (Au) \stackrel{B}{\longmapsto} B(Au) = (BA)u = Cu
 $$
-
-the transformation C is encoding the concatenation of the transformation A after B, in the sense that first x is the input of B, and then the output is the input of A:
-
-$$
-x \stackrel{B}{\longmapsto} (Bx) \stackrel{A}{\longmapsto} A(Bx) = (AB)x = Cx
-$$
-So every time we add a new "linear transformation" step to our output, we are piling up matrices by multiplication on the left.
+So every time we include "linear transformation" step, we are multiplying by a matrix on the left.
 
 You can find a more thorough explanation in [this 3blue1brown video](https://www.youtube.com/watch?v=XkY2DOUCWMU).
 
-In the previous exercise, try to find the matrix that describes the following transformations:
+**Observation**
+If $A$ is a full rank square matrix and $A^{-1}$ is the inverse matrix of the $A$, $A^{-1}$ reverts the effect of $A$.
 
-1. Apply matrix (1) and then (3).
-2. Apply matrix (3) and then (4).
+$$
+u \stackrel{A}{\longmapsto} (Au) \stackrel{A^{-1}}{\longmapsto} A^{-1}(Au) = (A^{-1}A)u = Iu = u
+$$
 
+**Exercise**
 
-**Challenge**: is matrix multiplication commutative? (hint: do you get the same result if you apply (3) then (4), or the other way round?)
+Using the matrices from the previous exercise, try to find the matrix that describes the following transformations:
 
+1. (2D) First expands all lengths by a factor of 2 in all axes and then rotates all vectors by $\pi/3$ radians (60 degrees) about the origin.
+2. (2D) First rotates all vectors by $\pi/3$ radians (60 degrees) about the origin and then Projects all vectors onto the x-axis.
+3. (3D) First reflects all vectors with respect to the $\{x,y\}$ plane and then projects all vectors onto the $\{x,z\}$ plane.
+4. (3D) First rotates all vectors by $\pi/3$ radians round the $x$ axis (matrix C), then rotates  $\pi/3$ radians round the $y$ axis (matrix B) and then  $\pi/3$ radians round the $z$ axis (matrix A).
+5. In the previous examples, does the order of matrix multiplication matter?
+6. In the exercise 3, is $A(BC)$ equal to $(AB)C$? 
 
 
 # Matrix algebra with R
@@ -238,9 +392,9 @@ class(x)
 
 ### Basic data types
 
-We have 3 basic data types: numerics, characters and logicals:
+We have 3 basic data types: **numerics, characters and logicals**:
 
-Numerics are needed to perform arithmetic operations:
+**Numerics** are needed to perform arithmetic operations:
 
 ```{r}
 y <- 9
@@ -248,21 +402,22 @@ z <- x + y
 class(z)
 ```
 
-Characters are what in other languages are known as strings:
+**Characters** are what in other languages are known as strings:
 
 ```{r}
 quote <- "Gilbert Strang rocks!"
 print(quote)
+class(quote)
 ```
 
-Finally, logicals (known as booleans in other programming languages) are important in conditions:
+Finally, **logicals** (known as booleans in other programming languages) are important in conditions:
 
 ```{r}
 (5 + 5) == 10
 (6 - 7) > 0
 ```
 
-We can convert between data types with the `as.*()` functions:
+We can convert between data types with the **`as.*()`** functions:
 
 ```{r}
 logical <- TRUE
@@ -291,7 +446,7 @@ They are created with specific functions:
 my_vector <- c(1, 2, 3)
 my_list <- list(1, "Ferran", TRUE)
 my_matrix <- matrix(c(1, 2, 3, 4), nrow = 2, ncol = 2, byrow = FALSE)
-my_data_frame <- data.frame(name = c("Ferran", "Ramon"), is_postdoc = c(TRUE, FALSE))
+my_data_frame <- data.frame(name = c("Ferran", "Paula"), male = c(TRUE, FALSE))
 my_vector
 my_list
 my_matrix
@@ -299,23 +454,26 @@ my_data_frame
 ```
 
 As you can imagine, these data structures are used for different purposes and taken by distinct functions. Here, we will focus on matrices.
-This section aims to teach the fundamentals of R so that you will be able to perform linear algebra operations and visualize them. We will start by teaching the basic data structures, categorized by dimensionality (1D: atomic vectors + lists; 2D: matrices + data.frames) and whether they can contain only one value type (homogeneous: atomic vectors and matrices) or more than one (heterogeneous: lists and data.frames). Moreover, here I showcase an example of the main functions we should cover in the hands-on session:
+
+This section aims to teach the fundamentals of R so that you will be able to perform linear algebra operations and visualize them. 
+
+<!-- We will start by teaching the basic data structures, categorized by dimensionality (1D: atomic vectors + lists; 2D: matrices + data.frames) and whether they can contain only one value type (homogeneous: atomic vectors and matrices) or more than one (heterogeneous: lists and data.frames). Moreover, here I showcase an example of the main functions we should cover in the hands-on session: -->
 
 
-## Create, subset and combine matrices in R
+## Create, subset and combine vectors and matrices in R
 
-We will show these operations for both atomic vectors and matrices. Let us start by creating two examples:
+We will show these operations for both atomic vectors and matrices. Let us start by creating a vector and a matrix:
 
 ```{r}
 # Create
-x <- c(1, 2, 3)
+x <- c(7,3,8)
 A <- matrix(c(1, 2, 3, 4, 5, 6, 7, 8, 9), nrow = 3, ncol = 3, byrow = FALSE)
 x 
 A
 ```
 
 
-Get the dimensions:
+ - Get the dimensions:
 
 ```{r}
 length(x)
@@ -325,7 +483,7 @@ ncol(A)
 ```
 
 
-To ease subsetting we can name rows and columns as follows:
+- To ease subsetting we can name rows and columns as follows:
 
 ```{r}
 names(x) <- c("1", "2", "3")
@@ -335,14 +493,15 @@ x
 A
 ```
 
-There are 3 ways of subsetting a vector: by index, by character or by logicals:
+- There are **3 ways** of subsetting a vector or a matrix: by index, by character or by logicals:
 
 ```{r}
+# Remember x = (7,3,8)
 # Subset
 ## Numeric
 x[1]
 x[c(2, 3)]
-x[c(3, 3)]
+x[c(1, 3, 3)]
 A[1:3, -2]
 
 ## Character
@@ -350,7 +509,15 @@ x["2"]
 A[c("a", "b"), ]
 ```
 
-**Challenge**: Create a vector from 1 to 100 (included), and then filter it to keep only the multiples of three. You're not allowed to use the `seq()` function.
+<!-- **Exercise**: Create a vector from 1 to 100 (included), and then filter it to keep only the multiples of three. You're not allowed to use the `seq()` function. -->
+
+<!-- **Solution** -->
+
+<!-- ```{r} -->
+
+
+<!-- ``` -->
+
 
 We can concatenate vectors and matrices as follows:
 
@@ -363,25 +530,39 @@ rbind(A, x)
 cbind(A, x)
 ```
 
+## Basic operations with vectors
+
+```{r}
+# Vector multiplication element by element
+# (7*7,3*3,8*8)
+x*x
+
+# Dot product 
+# 7*7+3*3+8*8
+x%*%x
+```
+
 
 ## Basic operations with matrices
 
 ```{r}
 # Transpose
-t(A)
+B <- t(A)
+B
 
+# Sum of matrices
+A + A
 
-# Matrix-vector operations
-A + x
-A * x
-A %*% x
+# Matrix multiplication element by element
+A * A
+
+# Matrix multiplication
+A %*% A
 t(x[1] %*% A[, 1]) + t(x[2] %*% A[, 2]) + t(x[3] %*% A[, 3])
 
 
-# Matrix-Matrix operations
-A + A
-A * A
-A %*% A
+# Matrix-vector multiplication
+A %*% x
 ```
 
 
@@ -392,60 +573,6 @@ A crucial skill in bioinformatics is to be able to visualize matrices. In real-w
 
 We will show you how to plot heatmaps in R using the `pheatmap` package. As an example, we will use a single-cell gene expression matrix of 2,638 peripheral blood mononuclear cells ([PBMC](https://en.wikipedia.org/wiki/Peripheral_blood_mononuclear_cell)). We download this data using the [`Seurat`](https://satijalab.org/seurat/) package,  which has become a swiss-army-knife of
 the software to analyze scRNA-seq data. The following chunk of code is executed to get the toy expression matrix, but you are not expected to understand it:
-
-```{r}
-# Get data
-library(pheatmap)
-library(Seurat)
-library(SeuratData)
-library(dplyr)
-InstallData("pbmc3k")
-data("pbmc3k")
-pbmc3k
-
-
-# Get expression matrix and reorder columns
-table(pbmc3k$seurat_annotations)
-pbmc3k$barcode <- colnames(pbmc3k)
-pbmc3k <- ScaleData(pbmc3k, features = rownames(pbmc3k))
-sorted_barcodes <- pbmc3k@meta.data %>%
-  dplyr::arrange(seurat_annotations) %>%
-  dplyr::pull("barcode")
-expr_matr <- pbmc3k[["RNA"]]@scale.data[, sorted_barcodes]
-
-
-# Subset to genes of interest (GOI)
-goi <- c("LDHB", "CCR7", "CD3D", "CD3E", "LEF1", "IL32", "IL7R", "CD2", "S100A9",
-         "S100A8", "CD14", "CST3", "LYZ", "FTL", "MS4A1", "CD79A", "CD79B", "VPREB3",
-         "CCL5", "NKG7", "GZMK", "CD8A", "KLRG1", "FCGR3A", "AIF1", "MS4A7", "IFITM3",
-         "RHOC", "CCL4")
-expr_matr <- expr_matr[goi, ]
-
-
-# Create column annotation metadata
-col_metadata <- pbmc3k@meta.data[, "seurat_annotations", drop = FALSE]
-colnames(col_metadata) <- "cell_type"
-```
-
-
-Now we will plot the heatmap. The `pheatmap()` function has a lot of parameters to fine-tune the visualization, we suggest you explore the documentation executing `?pheatmap`:
-
-
-```{r}
-annotation_colors <-  c("aquamarine", "orange", "green4", "blueviolet", "black",
-                        "coral2", "deepskyblue3", "red", "gold")
-names(annotation_colors) <- levels(col_metadata$cell_type)
-annotation_list <- list(cell_type = annotation_colors)
-pheatmap::pheatmap(
-  expr_matr,
-  cluster_rows = FALSE,
-  cluster_cols = FALSE,
-  show_colnames = FALSE,
-  color = viridis::viridis(30),
-  annotation_col = col_metadata,
-  annotation_colors = annotation_list
-)
-```
 
 
 Note that there are multiple R packages to plot heatmaps. Recently, [`ComplexHeatmap`](https://jokergoo.github.io/ComplexHeatmap-reference/book/) has gained a lot of attention.
