FIX link to notebook in session 8

--- a/_posts/2023-10-30-session08.md
+++ b/_posts/2023-10-30-session08.md
@@ -8,7 +8,7 @@ tags:
 # Tutorial
 
 Tutorial on orthogonal projections onto subspaces ([HTML]({{ site.baseurl }}{% link docs/2-projections_onto_subspaces.html %}),
-[Rmd](https://github.com/massonix/math_teaching/blob/master/notebooks/2-projections_onto_subspaces.Rmd))
+[Rmd]({{ site.baseurl }}{% link notebooks/2-projections_onto_subspaces.Rmd %})).
 
 # Before the tutorial
 
