FIX link to notebooks in tutorials 1 and 2

--- a/_posts/2023-10-16-session04.md
+++ b/_posts/2023-10-16-session04.md
@@ -9,7 +9,7 @@ tags:
 Tutorial on linear transformations:
 
 1. [HTML]({{ site.baseurl }}{% link docs/1-linear_transformations.html %})
-2. [Rmd]({{ site.baseurl }}{% link notebooks/1-linear_transformations.Rmd %})
+2. [Rmd](https://github.com/koszulordie/mat/blob/master/notebooks/1-linear_transformations.Rmd)
 
 
 # Before the tutorial
