--- a/_posts/2023-10-30-session08.md
+++ b/_posts/2023-10-30-session08.md
@@ -7,8 +7,10 @@ tags:
 
 # Tutorial
 
-Tutorial on orthogonal projections onto subspaces ([HTML]({{ site.baseurl }}{% link docs/2-projections_onto_subspaces.html %}),
-[Rmd]({{ site.baseurl }}{% link notebooks/2-projections_onto_subspaces.Rmd %})).
+Tutorial on orthogonal projections onto subspaces: 
+
+1. [HTML]({{ site.baseurl }}{% link docs/2-projections_onto_subspaces.html %})
+2. [Rmd](https://github.com/koszulordie/mat/blob/master/notebooks/2-projections_onto_subspaces.Rmd)
 
 # Before the tutorial
 
