--- a/_posts/2023-10-25-session07.md
+++ b/_posts/2023-10-25-session07.md
@@ -16,7 +16,11 @@ tags:
 
 # Lecture Notes
 
-<!-- [Exercises]({{ site.baseurl }}{% link exercises/exercises-session-8.pdf  %}) -->
+[Lecture Notes]({{ site.baseurl }}{% link lecture-notes/lecture07.pdf  %})
+
+# Exercises
+
+[Exercises]({{ site.baseurl }}{% link exercises/exercises-session-7.pdf  %})
 
 # Supplementary Content
 
