UPDATE: PCA tutorial

--- a/_posts/2023-11-06-session10.md
+++ b/_posts/2023-11-06-session10.md
@@ -4,16 +4,23 @@ title: "<u>10: Principal Component Analysis (tutorial)</u>"
 tags:
 ---
 
+
 # Tutorial
 
-Tutorial on PCA ([HTML]({{ site.baseurl }}{% link docs/3-principal_component_analysis_in_bioinformatics.html %}), 
-[Rmd](https://github.com/massonix/math_teaching/blob/master/notebooks/3-principal_component_analysis_in_bioinformatics.Rmd))
+Tutorial on PCA: 
+
+1. [HTML]({{ site.baseurl }}{% link docs/3-principal_component_analysis_in_bioinformatics.html %})
+2. [Rmd](https://github.com/koszulordie/mat/blob/master/notebooks/3-principal_component_analysis_in_bioinformatics.Rmd)
+
+
+# Lecture Notes
+
+[Lecture Notes]({{ site.baseurl }}{% link lecture-notes/lecture10.pdf  %})
 
 
 # Supplementary Content
 
 <!-- 1. [Last year's notes]({{ site.baseurl }}{% link docs/session-10.pdf %}) -->
 
-1. [PCA from a game-theoretical perpective](https://deepmind.com/blog/article
-/EigenGame).
+1. [PCA from a game-theoretical perpective](https://deepmind.com/blog/article/EigenGame).
 
