UPDATE: lectures 11 and 12

--- a/_posts/2023-11-08-session11.md
+++ b/_posts/2023-11-08-session11.md
@@ -23,5 +23,7 @@ tags:
 
 # Lecture Notes
 
+[Lecture Notes]({{ site.baseurl }}{% link lecture-notes/lecture11.pdf  %})
+
 <!-- [Last year's notes]({{ site.baseurl }}{% link docs/session-11.pdf  %}) -->
 
