--- a/_posts/2023-11-13-session12.md
+++ b/_posts/2023-11-13-session12.md
@@ -10,9 +10,6 @@ tags:
 2. Taylor's polynomial.
 3. Critical points.
 4. Computing local extrema.
-5. Local vs global extrema.
-6. Maximum likelihood estimation.
-
 
 # Homework
 
@@ -21,7 +18,11 @@ tags:
 
 # Lecture Notes
 
-<!-- [Exercises]({{ site.baseurl }}{% link exercises/exercises-session12.pdf %}) -->
+[Lecture Notes]({{ site.baseurl }}{% link lecture-notes/lecture12.pdf  %})
+
+# Exercises
+
+[Exercises]({{ site.baseurl }}{% link exercises/exercises-session-12.pdf %})
 
 # Supplementary Content
 
