NEW: lecture notes session 13

--- a/_posts/2023-11-15-session13.md
+++ b/_posts/2023-11-15-session13.md
@@ -9,7 +9,8 @@ tags:
 1. Representation of multivariable functions.
 2. Surfaces and level curves.
 3. Partial derivatives.
-4. Gradient.
+4. The differential.
+5. The gradient.
 
 
 # Before
@@ -20,3 +21,5 @@ tags:
 4. [Partial derivatives and graphs (6:54)](https://www.youtube.com/watch?v=dfvnCHqzK54&list=PLSQl0a2vh4HC5feHa6Rc5c0wbRTx56nF7&index=16)
 
 # Lecture Notes
+
+[Lecture Notes]({{ site.baseurl }}{% link lecture-notes/lecture13.pdf  %})
