--- a/_posts/2023-11-20-session14.md
+++ b/_posts/2023-11-20-session14.md
@@ -14,13 +14,10 @@ tags:
 5. Critical points.
 6. Classification of critical points.
 
-# Homework
-
 # Lecture Notes
 
-<!-- [Exercises]({{ site.baseurl }}{% link exercises/exercises-session-14.pdf %}) -->
+[Lecture Notes]({{ site.baseurl }}{% link lecture-notes/lecture14.pdf  %})
 
-# Supplementary Content
+# Exercises
 
-<!-- [Last year's notes]({{ site.baseurl }}{% link docs/session-14.pdf %}) -->
-
+[Exercises]({{ site.baseurl }}{% link exercises/exercises-session-14.pdf %})
