--- a/_posts/2023-11-22-session15.md
+++ b/_posts/2023-11-22-session15.md
@@ -6,8 +6,8 @@ tags:
 
 # Tutorial
 
-1. [Tutorial (HTML)]({{ site.baseurl }}{% link docs/4-mle_and_regression.html %})
-2. [Tutorial code (Rmd)]({{ site.baseurl }}{% link docs/4-mle_and_regression.Rmd %})
+1. [HTML]({{ site.baseurl }}{% link docs/4-mle_and_regression.html %})
+2. [Rmd](https://github.com/koszulordie/mat/blob/master/notebooks/4-mle_and_regression.Rmd)
 
 
 # Before the tutorial
@@ -18,10 +18,5 @@ Make sure to have the following packages installed:
 
 - [dslabs](https://cran.r-project.org/web/packages/dslabs/dslabs.pdf)
 - [rootSolve](https://cran.r-project.org/web/packages/rootSolve/vignettes/rootSolve.pdf)
-
-
-# Supplementary Content
-
-<!-- [Last year's notes]({{ site.baseurl }}{% link docs/session-15.pdf %}) -->
 
 
