UPDATE content for 2024-2025 course

--- a/_posts/2024-10-08-theory.md
+++ b/_posts/2024-10-08-theory.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "3: Gauss-Jordan elimination"
+title: "Gauss-Jordan elimination"
 tags:
 ---
 
@@ -16,8 +16,8 @@ tags:
 
 # Homework
 
-1. [Elimination (34:58)](https://drive.google.com/file/d/1UDC0g4GgxazSA2bkySeJIFNCl_ZPXIhs/view?usp=sharing)
-2. [The determinant (10:02)](https://www.youtube.com/watch?v=Ip3X9LOh2dk&list=PLZHQObOWTQDPD3MizzM2xVFitgF8hE_ab&index=6)
+<!-- 1. [Elimination (34:58)](https://drive.google.com/file/d/1UDC0g4GgxazSA2bkySeJIFNCl_ZPXIhs/view?usp=sharing) -->
+1. [The determinant (10:02)](https://www.youtube.com/watch?v=Ip3X9LOh2dk&list=PLZHQObOWTQDPD3MizzM2xVFitgF8hE_ab&index=6)
 
 # Lecture Notes
 
