--- a/_posts/2024-10-17-theory.md
+++ b/_posts/2024-10-17-theory.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "6: Orthogonality"
+title: "Orthogonality"
 tags:
 ---
 
@@ -18,8 +18,7 @@ tags:
 
 # Homework
 
-[Projection matrices and leasts squares (48:04)](https://www.youtube.com/watch?v=osh80YCg_GM).
-You might watch this video in full as it is all relevant to the course, particularly for the next seesion. In case you do not have a lot of time, you can jump to timestamp <u>36:55</u> directly and watch till the end.
+[Projection matrices and leasts squares](https://www.youtube.com/watch?v=osh80YCg_GM): jump to timestamp <u>36:55</u> directly and watch till the end.
 
 # Lecture Notes
 
