--- a/_posts/2024-10-23-theory.md
+++ b/_posts/2024-10-23-theory.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: "7: Eigendecomposition"
+title: "Eigendecomposition"
 tags:
 ---
 
 # Topics
 
-1. Eigenstuff: -values, -vectors, -bases, -spaces.
-2. How to compute eigenstuff.
+1. Eigen(stuff): eigenvalues, eigenvectors, eigenbases, eigenspaces.
+2. How to compute eigen(stuff).
 3. Matrix diagonalization.
 
 # Homework
