--- a/_posts/2024-11-20-theory.md
+++ b/_posts/2024-11-20-theory.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "13: Functions in many variables"
+title: "Functions in many variables"
 tags:
 ---
 
@@ -13,7 +13,7 @@ tags:
 5. The gradient.
 
 
-# Before
+# Homework
 
 1. [Introduction to  Multivariable Calculus (6:38)](https://www.youtube.com/watch?v=TrcCbdWwCBc&list=PLSQl0a2vh4HC5feHa6Rc5c0wbRTx56nF7)
 2. [Interpreting graphs with slices (5:37)](https://www.youtube.com/watch?v=E9bAwP7iK80&list=PLSQl0a2vh4HC5feHa6Rc5c0wbRTx56nF7&index=4)
