--- a/_posts/2024-11-13-tutorial.md
+++ b/_posts/2024-11-13-tutorial.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "<u>8: Orthogonal projections (tutorial)</u>"
+title: "<u>Orthogonal projections (tutorial)</u>"
 tags:
 ---
 
