--- a/_posts/2024-11-21-tutorial.md
+++ b/_posts/2024-11-21-tutorial.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "<u>10: Principal Component Analysis (tutorial)</u>"
+title: "<u>Principal Component Analysis (tutorial)</u>"
 tags:
 ---
 
