--- a/_posts/2024-11-28-tutorial.md
+++ b/_posts/2024-11-28-tutorial.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "<u>15: Regression (tutorial)</u>"
+title: "<u>Regression (tutorial)</u>"
 tags:
 ---
 
@@ -18,5 +18,3 @@ Make sure to have the following packages installed:
 
 - [dslabs](https://cran.r-project.org/web/packages/dslabs/dslabs.pdf)
 - [rootSolve](https://cran.r-project.org/web/packages/rootSolve/vignettes/rootSolve.pdf)
-
-
