--- a/_posts/2024-10-09-tutorial.md
+++ b/_posts/2024-10-09-tutorial.md
@@ -8,8 +8,8 @@ tags:
 
 Tutorial on linear transformations:
 
-1. [HTML]({{ site.baseurl }}{% link docs/1-linear_transformations.html %})
-2. [Rmd](https://github.com/koszulordie/mat/blob/master/notebooks/1-linear_transformations.Rmd)
+1. [HTML]({{ site.baseurl }}{% link docs/1-linear_transformations_Paula2024.html %})
+2. [Rmd]({{ site.baseurl }}{% link docs/1-linear_transformations_Paula2024.Rmd %})
 
 
 # Before the tutorial
