Changed lecture notes in session 1

--- a/_posts/2025-09-26-theory.md
+++ b/_posts/2025-09-26-theory.md
@@ -29,7 +29,7 @@ tags:
 
 # Lecture Notes
 
-[Lecture Notes]({{ site.baseurl }}{% link lecture-notes/lecture01.pdf %})
+[Lecture Notes]({{ site.baseurl }}{% link lecture-notes/vector_spaces.pdf %})
 
 # Exercises
 
