Update orthogonal projection tutorial

--- a/_posts/2025-11-06-tutorial.md
+++ b/_posts/2025-11-06-tutorial.md
@@ -9,8 +9,8 @@ tags:
 
 Tutorial on orthogonal projections onto subspaces: 
 
-1. [HTML]({{ site.baseurl }}{% link docs/2-projections_onto_subspaces.html %})
-2. [Rmd](https://github.com/koszulordie/mat/blob/master/notebooks/2-projections_onto_subspaces.Rmd)
+1. [HTML]({{ site.baseurl }}{% link docs/2-projections_onto_subspaces_2024.html %})
+2. [Rmd]({{ site.baseurl }}{% link docs/2-projections_onto_subspaces_2024.Rmd %})
 
 # Before the tutorial
 
